fixed cascading sheet and organized from largest screen to smallest screen so selectors would not overlap and select multiple screens causing CSS mayhem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,8 +184,137 @@ h1 {
 }
 
 
+
+/*// landscape  ipad responsiveness*/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+  .smashTitle{
+    width: 600px;
+  }
+  body{
+    background-image: url(/assets/images/ipad-landscape-background.jpg);
+    background-size: 1170px
+  }
+  .cardContainer {
+    height:75%;
+    width: 100%;
+    position: absolute;
+    left: 3.5%;
+    margin: 0px;
+    display: inline-block;
+}
+.card{
+  height: 40%;
+  margin: 5px;
+}
+.masterStatsDiv{
+  display: none;
+}
+}
+
+/*/ipad vertical responsiveness /*/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) { 
+
+  body{
+    background-image: url(/assets/images/vertical-ipad.jpeg);
+    background-size: 1400px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 90vh;
+    width: 100%;
+    margin: 0px;
+    position: relative;
+  }
+  header{
+    height: 5%;
+    margin-left: 10%;
+  }
+  .smashTitle{
+    content:url(/assets/images/ipad-vertical-title.png);
+    width: 100%;
+  }
+  .masterStatsDiv{
+    display: none;
+  }
+  .cardContainer{
+    width: 110%;
+    height: 135%;
+    left: 5%;
+  }
+  .cardContainer>.card:nth-child(17){
+    margin-left: 25%;
+  }
+  .card{
+    width: 210px;
+    height: 210px;
+  }
+  .modal {
+    font-family: smashFont;
+    display: none;
+    position: fixed;
+
+    z-index: 1;
+    padding-top: 100px;
+
+    left: 0;
+    top: 0;
+    width: 100%;
+
+    height: 100%;
+
+    overflow: auto;
+
+    background-color: rgb(0, 0, 0);
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+}
+
+  .modal-content {
+    position: absolute;
+    background-color: #fefefe;
+  
+    height: 500px;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+    justify-content: center;
+    border-radius: 25px;
+    background-color: #aef4af;
+    opacity: .9;
+    display: block;
+    left: 13%;
+    font-size: 2em;
+    text-align: center;
+    flex-direction: column;
+  }
+  .winGif{
+    width: 50%;
+    height: 50%%;
+  }
+}
+
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+
 /*// vertical iphone X responsiveness*/
-@media screen and (max-width: 375px) {
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px) 
+and (-webkit-device-pixel-ratio : 3)
+and (orientation : portrait)  {
   body{
     background-image: url(https://i.kym-cdn.com/photos/images/original/001/426/908/7b2.jpg);
     background-size: auto;
@@ -261,34 +390,13 @@ h1 {
   height: 10%;
 }
 }
-/*// landscape  ipad responsiveness*/
-@media  screen 
-and (min-device-width : 768px) 
-and (max-device-height : 1024px) 
+
+/*/iphone X landscape responsiveness/*/
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px) 
+and (-webkit-device-pixel-ratio : 3)
 and (orientation : landscape){
-  body{
-    background-image: url(/assets/images/ipad-landscape-background.jpg);
-    background-size: 1200px
-  }
-  .cardContainer {
-    height:75%;
-    width: 100%;
-    position: absolute;
-    left: 3.5%;
-    margin: 0px;
-    display: inline-block;
-}
-.card{
-  height: 40%;
-  margin: 5px;
-}
-.masterStatsDiv{
-  display: none;
-}
-}
-/*/iphone X horizontal responsiveness/*/
-@media screen and (max-width: 812px)
-and (max-height: 400px){
 body{
   background-size: 900px;
 }
@@ -330,48 +438,4 @@ display: block;
 text-align: center;
 flex-direction: column;
 }
-}
-
-/*/ipad vertical responsiveness /*/
-@media screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) { 
-
-  body{
-    background-image: url(/assets/images/vertical-ipad.jpeg);
-    background-size: 1400px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 90vh;
-    width: 100%;
-    margin: 0px;
-    position: relative;
-  }
-
-  .masterStatsDiv{
-    display: none;
-  }
-  .cardContainer{
-    width: 110%;
-    height: 135%;
-    left: 18%;
-  }
-  .cardContainer>.card:nth-child(17){
-    margin-left: 25%;
-  }
-  .card{
-    width: 210px;
-    height: 210px;
-  }
-}
-
-
-@keyframes spin {
-  from {
-      transform:rotate(0deg);
-  }
-  to {
-      transform:rotate(360deg);
-  }
 }
